Adding my CV as a link on homepage

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     position: absolute; /* Position it over the body */
     top: 0;
     left: 0;
-    width: 100%; /* Cover the full width */
-    height: 100%; /* Cover the full height */
+    width: 90%; /* Cover the full width */
+    height: 90%; /* Cover the full height */
     background-image: url("/images/background.jpeg"); /* Your background image */
     background-size: cover; /* Cover the entire area */
     opacity: 0.2; /* Adjust opacity to make the image softer. Range: 0.0 to 1.0 */
@@ -36,6 +36,9 @@
         .profile-text {
             flex: 1; /* Allows the text to fill the remaining space */
         }
+        h1, h2, h3, h4, h5, h6 {
+    font-weight: 300; /* Adjusts the font weight to be slimmer */
+}
     </style>
 </head>
 <body>
@@ -45,9 +48,9 @@
         <div class="profile-text">
             <p>Hi! I'm Will. I recently earned my PhD in Operations Management and Sustainability at Western University's Ivey Business School, advised by Profs. Jury Gualandris and Robert D. Klassen. My doctoral work was supported in part by SSHRC (Joseph-Armand Bombardier Canada Graduate Scholarship).</p>
             <p>My empirical research aims to understand how supply chains and society's most pressing environmental issues interact. My work primarily uses large panel datasets and econometric models.</p>
-            <p>I will be joining the Department of Management Science at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024. Get to know more about me and my work by exploring my site.</p>
+            <p>I will be joining the Department of Management Science at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024. </p>
         </div>
     </div>
-    <p><a href="path/to/your/CV.pdf" target="_blank">Download my CV</a></p>
+    <p><a href="/files/CV_WDiebel_24_7__Moore_.pdf" target="_blank">Download my CV</a></p>
 </body>
 </html>
