Updating website with links

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
     <div class="profile-container">
         <img src="/images/PhD_Photos_Profiles_028.jpg" alt="William Diebel">
         <div class="profile-text">
-            <p>Hi! I'm Will. I recently earned my PhD in Operations Management and Sustainability at Western University's Ivey Business School, advised by Profs. Jury Gualandris and Robert D. Klassen. My doctoral work was supported in part by SSHRC (Joseph-Armand Bombardier Canada Graduate Scholarship).</p>
+            <p>Hi! I'm Will. I recently earned my PhD in Operations Management and Sustainability at Western University's Ivey Business School, advised by Profs. <a href="https://www.ivey.uwo.ca/faculty_research/directory/jury-gualandris/">Jury Gualandris</a> and <a href="https://www.ivey.uwo.ca/faculty_research/directory/robert-klassen/">Robert D. Klassen</a>. My doctoral work was supported in part by SSHRC (Joseph-Armand Bombardier <a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Canada Graduate Scholarship - Doctoral</a>.</p>
             <p>My empirical research aims to understand how supply chains and society's most pressing environmental issues interact. My work primarily uses large panel datasets and econometric models.</p>
-            <p>I will be joining the Department of Management Science at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024. </p>
+            <p>I will be joining the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php"> Department of Management Science </a> at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024.</p>
         </div>
     </div>
-    <p><a href="/files/CV_WDiebel_24_7__Moore_.pdf" target="_blank">Download my CV</a></p>
+    <p>Quick Links</p>
+    <p><a href="/files/CV_WDiebel_24_7__Moore_.pdf" target="_blank">My current CV</a></p>
+    <p><a href="https://scholar.google.com/citations?user=wOYFzC8AAAAJ&hl=en" target="_blank">Google Scholar</a></p>
 </body>
 </html>
