--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="profile-container">
         <img src="/images/PhD_Photos_Profiles_028.jpg" alt="William Diebel">
         <div class="profile-text">
-            <p>Hi! I'm Will. I recently earned my PhD in Operations Management at Western University's Ivey Business School, advised by Profs. <a href="https://www.ivey.uwo.ca/faculty_research/directory/jury-gualandris/">Jury Gualandris</a> and <a href="https://www.ivey.uwo.ca/faculty_research/directory/robert-klassen/">Robert D. Klassen</a>. My doctoral work was supported in part by SSHRC (<a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>).</p>
+            <p>Hi! I'm Will. I recently earned my PhD in Operations Management from the Ivey Business School at Western University, advised by Profs. <a href="https://www.ivey.uwo.ca/faculty_research/directory/jury-gualandris/">Jury Gualandris</a> and <a href="https://www.ivey.uwo.ca/faculty_research/directory/robert-klassen/">Robert D. Klassen</a>. My doctoral work was supported in part by SSHRC (<a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>).</p>
             <p>My empirical research aims to understand how supply chains and society's most pressing environmental issues interact. My work primarily uses large panel datasets and econometric models.</p>
             <p>I will be joining the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php"> Department of Management Science </a> at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024.</p>
         </div>
