--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>I will be joining the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php"> Department of Management Science </a> at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024.</p>
         </div>
     </div>
-    <p><a href="/files/CV_WDiebel_24_7__Moore_.pdf" target="_blank">My current CV</a></p>
+    <p><a href="/files/CV_WDiebel_24_7__Moore_.pdf" target="_blank">CV</a></p>
     <p><a href="https://scholar.google.com/citations?user=wOYFzC8AAAAJ&hl=en" target="_blank">Google Scholar</a></p>
 </body>
 </html>
