Updates to html - photo, padding, favicon

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feature Page</title>
+    <link rel="icon" type="image/png" href="/Users/williamdiebel/Library/CloudStorage/Dropbox/My Mac (Will’s Laptop)/Documents/GitHub/williamdiebel.github.io/images/favicon.jpeg"/> <!-- Add your favicon file path -->
     <style>
         body {
             font-family: 'Optima', 'Helvetica', 'Arial', sans-serif;
+            padding: 20px; /* Adds padding around the entire page */
     }
         .profile-container {
             display: flex;
@@ -15,8 +17,8 @@
         .profile-container img {
             border-radius: 50%; /* Creates the circular crop */
             margin-right: 20px; /* Adds some space between the image and the text */
-            width: 150px; /* Adjust as needed */
-            height: 150px; /* Adjust as needed */
+            width: 20%; /* Adjust as needed, now responsive */
+            height: auto; /* Maintains aspect ratio */
             object-fit: cover; /* Ensures the image covers the area without distortion */
         }
         .profile-text {
