--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Optima', 'Helvetica', 'Arial', sans-serif;
-            padding: 20px; /* Adds padding around the entire page */
+            padding: 100px; /* Adds padding around the entire page */
     }
         .profile-container {
             display: flex;
@@ -17,8 +17,8 @@
         .profile-container img {
             border-radius: 50%; /* Creates the circular crop */
             margin-right: 20px; /* Adds some space between the image and the text */
-            width: 20%; /* Adjust as needed, now responsive */
-            height: auto; /* Maintains aspect ratio */
+            width: 15vw; /* Adjust as needed, now responsive */
+            height: 15vw; /* Maintains aspect ratio */
             object-fit: cover; /* Ensures the image covers the area without distortion */
         }
         .profile-text {
@@ -30,7 +30,9 @@
     </style>
 </head>
 <body>
-    <h1>William Diebel, PhD</h1>
+    <header>
+        <h1>William Diebel, PhD</h1>
+    </header>
     <div class="profile-container">
         <img src="/images/PhD_Photos_Profiles_028.jpg" alt="William Diebel">
         <div class="profile-text">
