Editing website title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feature Page</title>
+    <title>William Diebel, PhD</title>
     <link rel="icon" type="image/png" href="/Users/williamdiebel/Library/CloudStorage/Dropbox/My Mac (Will’s Laptop)/Documents/GitHub/williamdiebel.github.io/images/favicon.jpeg"/> <!-- Add your favicon file path -->
     <style>
         body {
