--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img src="/images/PhD_Photos_Profiles_028.jpg" alt="William Diebel">
         <div class="profile-text">
             <p>Hi! I'm Will. I recently earned my PhD in Operations Management from the <a href="https://www.ivey.uwo.ca">Ivey Business School</a> at Western University. My doctoral work was supported in part by SSHRC (<a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>)</p>
-            <p>My empirical research aims to understand how supply chains and society's most pressing environmental issues interact, appearing in the <i>Journal of Operations Management</i>, <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/joom.1293">DOI: 10.1002/joom.1293</a></p>
+            <p>My empirical research aims to understand how supply chains and society's most pressing environmental issues interact, appearing in the <i>Journal of Operations Management</i> <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/joom.1293">DOI: 10.1002/joom.1293</a>.</p>
             <p>I will be joining the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php"> Department of Management Science </a> at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024.</p>
         </div>
     </div>
