--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="profile-text">
             <p>Hi! I'm Will. I recently earned my PhD in Operations Management from the <a href="https://www.ivey.uwo.ca">Ivey Business School</a> at Western University. My doctoral work was supported in part by SSHRC (<a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>).</p>
             <p>My empirical research aims to understand how supply chains and society's most pressing environmental issues interact. To date, my work has been published in the <i>Journal of Operations Management</i> <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/joom.1293">DOI: 10.1002/joom.1293</a>.</p>
-            <p>I will be joining the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php"> Department of Management Science </a> at the University of South Carolina, Darla Moore School of Business as a tenure track Assistant Professor in August 2024.</p>
+            <p>I am now an Assistant Professor in the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php"> Department of Management Science </a> at the University of South Carolina, Darla Moore School of Business.</p>
         </div>
     </div>
     <p><a href="/files/CV_WDiebel_24_7__Moore_.pdf" target="_blank">CV</a></p>
