--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <div class="profile-container">
         <img src="/images/PhD_Photos_Profiles_028.jpg" alt="William Diebel">
         <div class="profile-text">
-            <p>Hi! I'm Will. I recently earned my PhD in Operations Management from the <a href="https://www.ivey.uwo.ca">Ivey Business School</a> at Western University. My doctoral work was supported in part by SSHRC (<a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>).</p>
-            <p>My empirical research aims to understand how supply chains and society's most pressing environmental issues interact. To date, my work has been published in the <i>Journal of Operations Management</i> <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/joom.1293">DOI: 10.1002/joom.1293</a>.</p>
-            <p>I am now an Assistant Professor in the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php"> Department of Management Science </a> at the University of South Carolina, Darla Moore School of Business.</p>
+            <p>Hi! I'm Will, an Assistant Professor in the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php">Department of Management Science</a> at the University of South Carolina's Darla Moore School of Business. My research focuses on the intersection of supply chains and critical environmental issues, with a particular interest in corporate environmental transparency.</p> 
+            <p>Prior to joining USC, I earned my PhD in Operations Management from the <a href="https://www.ivey.uwo.ca">Ivey Business School</a> at Western University, where I was a recipient of the <a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>, supported by SSHRC.</p> 
+            <p>My work has been published in leading academic journals, including the <i>Journal of Operations Management</i> (<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/joom.1293">DOI: 10.1002/joom.1293</a>), and continues to explore how supply chains can address society's environmental challenges.</p>
         </div>
-    </div>
+        </div>
     <p><a href="/files/CV_WDiebel_24_7__Moore_.pdf" target="_blank">CV</a></p>
     <p><a href="https://scholar.google.com/citations?user=wOYFzC8AAAAJ&hl=en" target="_blank">Google Scholar</a></p>
 </body>
