--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>William Diebel, PhD</h1>
     </header>
     <div class="profile-container">
-        <img src="/images/PhD_Photos_Profiles_028.jpg" alt="William Diebel">
+        <img src="/images/diebel_will-2_square.png" alt="William Diebel">
         <div class="profile-text">
             <p>Hi! I'm Will, a tenure-track Assistant Professor in the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php">Department of Management Science</a> at the University of South Carolina - Darla Moore School of Business. My research focuses on the intersection of supply chains and critical environmental issues, with a particular interest in corporate environmental transparency.</p> 
             <p>Prior to joining USC Moore, I earned my PhD in Operations Management from the <a href="https://www.ivey.uwo.ca">Ivey Business School</a> at Western University, where I was a recipient of the <a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>, supported by SSHRC.</p> 
