--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>In Fall 2024, I am teaching the MGSC 395 Operations Management undergraduate degree course.</p>
         </div>
         </div>
-    <p><a href="mailto:william.diebel@moore.sc.edu">Email</a></p>
+    <p><a href="mailto:william.diebel@moore.sc.edu">william.diebel@moore.sc.edu</a></p>
     <p><a href="/files/CV_WDiebel_24_9__Moore_.pdf" target="_blank">CV</a></p>
     <p><a href="https://scholar.google.com/citations?user=wOYFzC8AAAAJ&hl=en" target="_blank">Google Scholar</a></p>
 </body>
