--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>Hi! I'm Will, a tenure-track Assistant Professor in the <a href="https://sc.edu/study/colleges_schools/moore/study/management_science/index.php">Department of Management Science</a> at the University of South Carolina - Darla Moore School of Business. My research focuses on the intersection of supply chains and critical environmental issues, with a particular interest in corporate environmental transparency.</p> 
             <p>Prior to joining USC Moore, I earned my PhD in Operations Management from the <a href="https://www.ivey.uwo.ca">Ivey Business School</a> at Western University, where I was a recipient of the <a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Joseph-Armand Bombardier Canada Graduate Scholarship - Doctoral</a>, supported by SSHRC.</p> 
             <p>My research has been published in the <i>Journal of Operations Management</i> (<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/joom.1293">DOI: 10.1002/joom.1293</a>) and continues to explore how supply chains can address society's most pressing environmental challenges.</p>
-            <p>In Fall 2024, I am teaching the MGSC 395 Operations Management undergraduate degree course.</p>
+            <p>I currently teach the MGSC 395 Operations Management undergraduate degree course in Fall semesters.</p>
         </div>
         </div>
     <p><a href="mailto:william.diebel@moore.sc.edu">william.diebel@moore.sc.edu</a></p>
