--- a/gradecalculator.html
+++ b/gradecalculator.html
@@ -15,11 +15,11 @@
 <body>
   <h1>Grade Calculator</h1>
   <form id="gradeForm">
-    <label>Exam 1 (0-100, 25%): <input type="number" id="exam1" min="0" max="100" required></label>
-    <label>Exam 2 (0-100, 25%): <input type="number" id="exam2" min="0" max="100" required></label>
-    <label>Exam 3 (0-100, 25%): <input type="number" id="exam3" min="0" max="100" required></label>
-    <label>Homework (0-100, 20%): <input type="number" id="homework" min="0" max="100" required></label>
-    <label>Attendance (0-100, 5%): <input type="number" id="attendance" min="0" max="100" required></label>
+    <label>25%: Exam 1 (0-100): <input type="number" id="exam1" min="0" max="100" required></label>
+    <label>25%: Exam 2 (0-100): <input type="number" id="exam2" min="0" max="100" required></label>
+    <label>25%: Exam 3 (0-100): <input type="number" id="exam3" min="0" max="100" required></label>
+    <label>20%: Homework (0-100): <input type="number" id="homework" min="0" max="100" required></label>
+    <label>5%: Attendance (0-100): <input type="number" id="attendance" min="0" max="100" required></label>
     <button type="submit">Calculate Grade</button>
   </form>
   <div class="result" id="result"></div>
