--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>My CV</h1>
-    <iframe src="files/CV_WDiebel_24_7__Moore_.pdf" width="100%" height="500px"></iframe>
+    <iframe src="files/CV_WDiebel_26_01.pdf" width="100%" height="500px"></iframe>
 </body>
 </html>
