--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>I currently teach the MGSC 395 Operations Management undergraduate degree course in Fall semesters.</p>
         </div>
         </div>
-    <p><a href="/files/CV_WDiebel_25_03__Moore_.pdf" target="_blank">CV</a></p>
+    <p><a href="/files/CV_WDiebel_26_01.pdf" target="_blank">CV</a></p>
     <p><a href="https://scholar.google.com/citations?user=wOYFzC8AAAAJ&hl=en" target="_blank">Google Scholar</a></p>
     <p><a href="gradecalculator.html">MGSC395 Grade Calculator</a></p>
 </body>
