update w office number

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 </div>
                 <div class="contact-item">
                     <div class="contact-label">Office</div>
-                    <div class="contact-value">Darla Moore School of Business<br>1014 Greene St<br>Columbia, SC 29208</div>
+                    <div class="contact-value">401A, Darla Moore School of Business<br>1014 Greene St<br>Columbia, SC 29208</div>
                 </div>
             </div>
         </section>
