minor updates to WIP and office address formatting

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             <div class="publication">
                 <div class="publication-title">The (Un)Intended Effects of Supply Chain Transparency on Media-Reported Environmental Incidents</div>
                 <div class="publication-authors">Diebel, W., Gualandris, J., & Klassen, R. D.</div>
-                <div class="publication-venue"><em>Manufacturing & Service Operations Management</em> &mdash; 1st round review. <a href="https://ssrn.com/abstract=5179964" target="_blank">SSRN</a></div>
+                <div class="publication-venue"><em>Manufacturing & Service Operations Management</em> &mdash; R&R. <a href="https://ssrn.com/abstract=5179964" target="_blank">SSRN</a></div>
             </div>
 
             <h3>Working Papers</h3>
@@ -475,7 +475,7 @@
                 </div>
                 <div class="contact-item">
                     <div class="contact-label">Office</div>
-                    <div class="contact-value">401A, Darla Moore School of Business<br>1014 Greene St<br>Columbia, SC 29208</div>
+                    <div class="contact-value">401A<br>Darla Moore School of Business<br>1014 Greene St<br>Columbia, SC 29208</div>
                 </div>
             </div>
         </section>
