--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                 <a href="https://scholar.google.com/citations?user=wOYFzC8AAAAJ&hl=en" target="_blank">Google Scholar</a>
                 <a href="https://github.com/williamdiebel" target="_blank">GitHub</a>
                 <a href="https://sc.edu/study/colleges_schools/moore/directory/diebel_william.php" target="_blank">USC Faculty Page</a>
+                <a href="https://www.linkedin.com/in/williamdiebel/" target="_blank">LinkedIn</a>
             </div>
         </header>
 
